# MachOExplorer

./: .gitignore  AGENT.md  AGENTS.md  CLI.md  CLI.zh-CN.md  CMakeLists.txt  DEVELOP.md  FutureREADME.md  LICENSE  README.md  README.zh-CN.md  README1.md  build.sh  build_linux.sh  build_macos.sh  build_windows.bat  clean.sh  deploy.sh  dev.md  dist.sh  dist_cli.sh  dist_dmg.sh  env.sh  gen_dmg.sh  prepare.sh  run.sh
moex-cli/: AppHandler.cpp  AppHandler.h  CMakeLists.txt  libmoex  moex-cli.cpp
moex-cli/display/: CommonDisplay.cpp  CommonDisplay.h  common_display.cpp  common_display.h
moex-cli/impl/: CommonDisplay.cpp  CommonDisplay.h  TestCode.cpp
moex-cli/src/: AppHandler.cpp  AppHandler.h  main.cpp
moex-cli/src/impl/: CommonDisplay.cpp  CommonDisplay.h  TestCode.cpp  TestCode.h
moex-cli/src/util/: ArgvParser.h  BeautyTextPrint.h
moex-cli/util/: ArgvParser.h  BeautyTextPrint.h  CommandParser.h  Utility.h
moex-gui/: CMakeLists.txt  MachOExplorer.icns  MachOExplorer.pro  MachOExplorer.qrc  gen_xcode_project.sh  moex-gui.cpp  moex-gui.pro  moex-ui.pro
moex-gui/controller/: basecontroller.h  binarycontentcontroller.cpp  binarycontentcontroller.h  layoutcontroller.cpp  layoutcontroller.h  skeletoncontroller.cpp  skeletoncontroller.h  tablecontentcontroller.cpp  tablecontentcontroller.h  workspace.cpp  workspace.h  workspacemanager.cpp  workspacemanager.h
moex-gui/src/: main.cpp  moex-gui.cpp  moex.qrc
moex-gui/src/common/: appinfo.cpp
moex-gui/src/controller/: basecontroller.cpp  tablecontentcontroller.cpp  workspacemanager.cpp  workspacemanager.h
moex-gui/src/dialog/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  checkupdatedialog.h  checkupdatedialog.ui
moex-gui/src/utility/: utility.cpp
moex-gui/src/view/: contentview.cpp  contentview.h  layoutview.cpp  layoutview.h  logview.cpp  logview.h  mainwindow.cpp  mainwindow.h
moex-gui/src/view/QtFlex5/: QtDockSide.h  QtDockSite.cpp  QtDockWidget.cpp  QtFlexHelper.cpp  QtFlexManager.cpp  QtFlexWidget.cpp  QtFlexWidget.h
moex-gui/src/view/content/: binarycontentview.cpp  contentviewinterface.h  tablecontentview.cpp  tablecontentview.h
moex-gui/utility/: utility.cpp  utility.h
moex-gui/view/: contentview.cpp  contentview.h  layoutview.cpp  layoutview.h  logview.cpp  mainwindow.cpp  mainwindow.h  skeletonview.cpp
moex-gui/view/content/: binarycontentview.cpp  binarycontentview.h  tablecontentview.cpp  tablecontentview.h
moex-gui/view/widget/: hexeditwidget.h
reference/QtFlex5-master/examples/QtGuider/: CMakeLists.txt  QtGuider.cpp  QtGuider.h  QtGuider.pro  QtGuider.qrc  QtGuider.ui  QtGuider.vcxproj  QtGuider.vcxproj.filters  main.cpp
reference/QtFlex5-master/src/: CMakeLists.txt  QtDockSide.cpp  QtDockSite.cpp  QtDockSite.h  QtFlex.qrc  QtFlex.vcxproj  QtFlex.vcxproj.filters  QtFlexHelper.cpp  QtFlexHelper.h  QtFlexManager.cpp  QtFlexManager.h  QtFlexStyle.cpp  QtFlexStyle.h  QtFlexWidget.cpp  src.pro
src/: CMakeLists.txt  MachOExplorer.pro  MachOExplorer.qrc  MachOExplorer.rc
src/fuzz/: fuzz_macho_parse.cpp
src/libmoex/: moex.h  ver.h
src/libmoex/base/demangle/: Demangle.h
src/libmoex/base/digest/: Sha.h
src/libmoex/base/fmt/: format.h
src/libmoex/node/: Archive.cpp  Archive.h  Binary.cpp  Binary.h  Common.h  Defines.h  DyldSharedCache.cpp  DyldSharedCache.h  FatHeader.cpp  FatHeader.h  LoadCommand.cpp  LoadCommand.h  MachHeader.cpp  MachHeader.h  MachSection.cpp  MachSection.h  Magic.h  Node.h  Util.cpp  Util.h
src/libmoex/viewnode/: CodeSignatureViewNode.cpp  CodeSignatureViewNode.h  DataInCodeEntriesViewNode.h  DynamicLoaderInfoViewNode.cpp  DynamicLoaderInfoViewNode.h  DynamicSymbolTable.cpp  DynamicSymbolTable.h  FatHeaderViewNode.cpp  FatHeaderViewNode.h  LoadCommandViewNode.cpp  LoadCommandViewNode.h  MachHeaderViewNode.cpp  SectionViewNode.cpp  SectionsViewNode.cpp  SectionsViewNode.h  SegmentSplitInfoViewNode.cpp  SegmentSplitInfoViewNode.h  StringTableViewNode.cpp  StringTableViewNode.h  SymbolTableViewNode.cpp  SymbolTableViewNode.h  TwoLevelHintsTableViewNode.h  ViewNode.cpp  ViewNode.h  ViewNodeDumper.cpp  ViewNodeDumper.h  ViewNodeManager.h
src/src/: CentralWidget.cpp  CentralWidget.h  Main.cpp  MainCentralWidget.h  MainWindow.cpp  MainWindow.h  Moex.cpp  Moex.h  MoexApplication.cpp  MoexApplication.h  Stable.h  main.cpp
src/src/base/: AppInfo.cpp
src/src/common/: AppInfo.h  appinfo.cpp
src/src/controller/: BaseController.cpp  BaseController.h  LayoutController.cpp  LayoutController.h  LayoutFilterProxyModel.h  TableContentController.cpp  TableContentController.h  TableInfoController.cpp  TableInfoController.h  Workspace.cpp  Workspace.h  WorkspaceManager.cpp  WorkspaceManager.h  basecontroller.h  layoutcontroller.cpp  windowshareddata.h  workspacemanager.cpp  workspacemanager.h
src/src/dialog/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CheckUpdateDialog.cpp  OpenFileDialog.cpp  OpenFileDialog.h  OpenFileDialog.ui  aboutdialog.h  checkupdatedialog.cpp
src/src/dock/: HexDockWidget.cpp  HexDockWidget.h  InformationDockWidget.cpp  InformationDockWidget.h  LayoutDockWidget.cpp  LayoutDockWidget.h  LogDockWidget.cpp  LogDockWidget.h  SourceCodeDockWidget.cpp  SourceCodeDockWidget.h
src/src/test/: Test.cpp  Test.h
src/src/utility/: Utility.cpp  Utility.h
src/src/view/: BinaryDockWidget.cpp  BinaryDockWidget.h  ContentView.cpp  ContentView.h  HelpDockWidget.cpp  HelpDockWidget.h  HexDockWidget.cpp  InfoDockWidget.cpp  InfoDockWidget.h  LayoutDockWidget.cpp  LayoutDockWidget.h  LayoutView.cpp  LayoutView.h  LogDockWidget.cpp  LogDockWidget.h  LogView.cpp  LogView.h  MainCentralWidget.cpp  MainCentralWidget.h  MainContentWidget.cpp  MainContentWidget.h  MainWindow.cpp  MainWindow.h  contentview.h  layoutview.cpp  layoutview.h  logview.cpp  mainwindow.cpp  mainwindow.h
src/src/widget/: HexdumpWidget.cpp  HexdumpWidget.h  LayoutTreeView.cpp  LayoutTreeView.h  TableContentWidget.cpp  TableContentWidget.h  TableInfoWidget.cpp  TableInfoWidget.h
src/tools/: moex_cache_extract_main.cpp  moex_cache_list_main.cpp  moex_diff_main.cpp  moex_parse_main.cpp
(+329 files in other folders)
